--- a/app/views/weather/show.erb
+++ b/app/views/weather/show.erb
@@ -5,7 +5,7 @@
 <div class="container">
   <h3 id="6"></h3>
   <h1 id="8"></h1>
-	<h4 id="1"></h4>
+  <h4 id="1"></h4>
 
 	<!-- <h3>Weather</h3>
 	<h3>Description</h3>
@@ -151,12 +151,9 @@
 		var humidity = res.main.humidity
 		var wind = res.wind.speed
 		var name = res.name
-		document.getElementById("2").innerHTML = main;
-		document.getElementById("3").innerHTML = description;
-		// document.getElementById("4").innerHTML = humidity;
-		// document.getElementById("5").innerHTML = wind;
+// 		document.getElementById("2").innerHTML = main;
+// 		document.getElementById("3").innerHTML = description;
 		document.getElementById("6").innerHTML = name;
-		// document.getElementById("7").innerHTML = "tb";
 
 	})
 </script>
